--- a/install/安装文档.md
+++ b/install/安装文档.md
@@ -26,105 +26,24 @@ docker build -t yearning:base .
 docker rm -f `docker ps -a -q`
 ```
 
-# 二、镜像构建
-
+# 二、运行容器
 ```
-#服务启动脚本
-start_yearning.sh
+v1.3.0及以上版本安装
 
-/usr/sbin/nginx
-cd /opt/Yearning/src
-sed -i "s/ipaddress =.*/ipaddress=$HOST/" deploy.conf
-sed -i "s/address =.*/address=$MYSQL_ADDR/" deploy.conf
-sed -i "s/username =.*/username=$MYSQL_USER/" deploy.conf
-sed -i "s/password =.*/password=$MYSQL_PASSWORD/" deploy.conf
-/usr/local/python3.6/bin/gunicorn settingConf.wsgi:application -b 0.0.0.0:8000 -w 2
+从v1.3.0版本开始将采取docker运行的方式，不再提供普通安装教程
+安装：
 
+注意:inception安装不在本安装教程之内，请自行安装inceotion，可使用install目录下inception.tar解压后获得的inception二进制直接运行
 
-#本地镜像
-FROM yearning_local
-MAINTAINER cookieYe 2018-9-17
-EXPOSE 8000
-EXPOSE 80
-ENTRYPOINT start_yearning.sh
+1.下载Yearning,进入install/yearning-docker-compose目录
 
-```
+docker-compose up -d
 
-# 三、Dockerfile编写
-```
-FROM docker.io/centos
-# FROM centos:latest
-# yearning
-# WORKDIR /opt/
-RUN yum install -y wget \
-    # 变更163yum源
-    && wget -O /etc/yum.repos.d/CentOS-Base.repo http://mirrors.163.com/.help/CentOS7-Base-163.repo \
-    && yum clean all \
-    && yum makecache \
-    && yum install -y wget git readline readline-devel gcc gcc-c++ zlib zlib-devel openssl openssl-devel sqlite-devel python-devel \
-    && yum -y install epel-release \
-    # python3.6.6
-    && cd /usr/local/src \
-    && wget https://www.python.org/ftp/python/3.6.6/Python-3.6.6.tgz \
-    && tar -xzf Python-3.6.6.tgz \
-    && cd Python-3.6.6 \
-    && ./configure --prefix=/usr/local/python3.6 --enable-shared \
-    && make && make install \
-    && ln -s /usr/local/python3.6/bin/python3.6 /usr/bin/python3 \
-    && ln -s /usr/local/python3.6/bin/pip3 /usr/bin/pip3 \
-    && ln -s /usr/local/python3.6/bin/pyvenv /usr/bin/pyvenv \
-    && cp /usr/local/python3.6/lib/libpython3.6m.so.1.0 /usr/local/lib \
-    && cd /usr/local/lib \
-    && ln -s libpython3.6m.so.1.0 libpython3.6m.so \
-    && echo '/usr/local/lib' >> /etc/ld.so.conf \
-    && /sbin/ldconfig \
-    # pip升级
-    && pip3 install --upgrade pip \
-    # 下载源码
-    && cd /opt \
-    && git clone https://github.com/cookieY/Yearning.git \
-    # 安装nginx
-    && yum -y install nginx
-# 拷贝编译好的前端文件
-ADD dist/ /var/lib/nginx/
-# 增加yearning的nginx配置文件
-ADD nginx.conf /etc/nginx/nginx.conf
-# 拷贝一份deploy.conf
-ADD Yearning/src/deploy.conf.template /opt/Yearning/src/deploy.conf
-# 安装依赖
-RUN pip3 install -r /opt/Yearning/src/requirements.txt -i https://mirrors.ustc.edu.cn/pypi/web/simple/
-# 增加启动脚本
-ADD start_yearning.sh /opt/
-# 挂载逻辑卷
-#VOLUME /opt/Yearning/ /tmp/
-# port
-EXPOSE 80
-EXPOSE 8000
-# start service
-ENTRYPOINT bash /opt/start_yearning.sh && bash
-```
+请注意本地不要占用8080和8000端口 如需要更改端口可再docker-compose.yml文件中更改，3306和8000端口不可更改！
 
-## 四、镜像构建
-```
-docker build -t yearning:base .
+之后访问8080端口。
 
-docker build -t yearning:local -f Dockerfile .
+默认用户admin 密码: Yearning_admin
 
-docker build -t yearning:base -f Dockerfile .
-```
-
-## 五、上传镜像到阿里云
-```
-#登陆命令
-docker login --username=243533819@qq.com registry.cn-hangzhou.aliyuncs.com
-
-#复制镜像ID并设置tag (或者tag repository:tag)
-docker tag yearning:base registry.cn-hangzhou.aliyuncs.com/lancger_ops/yearning_base:v1.0.0
-
-#上传镜像到阿里云镜像仓库
-docker push registry.cn-hangzhou.aliyuncs.com/lancger_ops/yearning_base:v1.0.0
-
-#使用阿里云镜像
-docker run -itd registry.cn-hangzhou.aliyuncs.com/lancger_ops/yearning_base:v1.0.0
-
+登陆后请通过设置页面设置inception及其他配置信息
 ```
