--- a/install/安装文档.md
+++ b/install/安装文档.md
@@ -33,7 +33,7 @@ v1.3.0及以上版本安装
 从v1.3.0版本开始将采取docker运行的方式，不再提供普通安装教程
 安装：
 
-注意:inception安装不在本安装教程之内，请自行安装inceotion，可使用install目录下inception.tar解压后获得的inception二进制直接运行
+inception安装不在本安装教程之内，请自行安装inceotion，可使用install目录下inception.tar解压后获得的inception二进制直接运行
 
 1.下载Yearning,进入install/yearning-docker-compose目录
 
